tests/codegen/fail/scalar/derive_input/attr_transparent_and_with.stderr
error: GraphQL scalar `with = <path>` attribute argument cannot be combined with `transparent`. You can specify custom resolvers with `to_output_with`, `from_input_with`, `parse_token`/`parse_token_with` attribute arguments and still use `transparent` for unspecified ones.
 --> fail/scalar/derive_input/attr_transparent_and_with.rs:4:18
  |
4 | #[graphql(with = Self, transparent)]
  |                  ^^^^

error: cannot find attribute `graphql` in this scope
 --> fail/scalar/derive_input/attr_transparent_and_with.rs:4:3
  |
4 | #[graphql(with = Self, transparent)]
  |   ^^^^^^^
  |
help: `graphql` is an attribute that can be used by the derive macros `GraphQLEnum`, `GraphQLInputObject`, `GraphQLInterface`, `GraphQLObject`, `GraphQLScalar` and `GraphQLUnion`, you might be missing a `derive` attribute
  |
5 + #[derive(GraphQLEnum, GraphQLInputObject, GraphQLInterface, GraphQLObject, GraphQLScalar, GraphQLUnion)]
6 | struct Scalar;
  |
